--- a/code4playhackathonserver/views/layout.jade
+++ b/code4playhackathonserver/views/layout.jade
@@ -1,7 +1,11 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+	title= title
+	link(rel='stylesheet', href='/stylesheets/style.css')
+	link(rel='stylesheet', href='http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css')
+	script(src='/javascripts/jquery-2.1.0.min.js')
+	script(src='/javascripts/jquery-ui.js')
+	script(src='/javascripts/knockout-3.1.0.js')
+	body
+		block content
