add bootstrap css and js

--- a/code4playhackathonserver/views/layout.jade
+++ b/code4playhackathonserver/views/layout.jade
@@ -2,10 +2,13 @@ doctype html
 html
 	head
 	title= title
+	link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+	link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css')
 	link(rel='stylesheet', href='/stylesheets/style.css')
 	link(rel='stylesheet', href='http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css')
 	script(src='/javascripts/jquery-2.1.0.min.js')
 	script(src='/javascripts/jquery-ui.js')
 	script(src='/javascripts/knockout-3.1.0.js')
+	script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
 	body
 		block content
